# study-django-rest

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
study_django_rest/: manage.py
study_django_rest/api/: urls.py  views.py
study_django_rest/polls/: admin.py  models.py  tests.py  urls.py  views.py
study_django_rest/polls/migrations/: 0001_initial.py
study_django_rest/polls/templates/polls/: detail.html  results.html
study_django_rest/snippets/: models.py  serializers.py  urls.py  views.py
study_django_rest/snippets/migrations/: 0001_initial.py
study_django_rest/study_django_rest/: asgi.py  settings.py  urls.py  wsgi.py
