[tool.poetry]
name = "study-django-rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,W504"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
ignore_missing_imports = true
